- Refactor navbar positioning to fixed for improved accessibility; added z-index for layering; updated category item styles for consistency. - Load Items content with additional criterias such as size, shade_type, key_ingredients and benefits.

--- a/Natura Glow/scss/styles.scss
+++ b/Natura Glow/scss/styles.scss
@@ -76,7 +76,8 @@
 .navbar {
     background-color:#2222226e;
     -webkit-backdrop-filter:blur(2px);
-    position:sticky;
+    position:fixed;
+    z-index:99;
     top:0;
     left:0;
     backdrop-filter:blur(2px);
@@ -87,6 +88,9 @@
 }
 .border-main {
     border:1px solid #362516;
+}
+.category2Items {
+    width:100%;
 }
 
 .footer{
@@ -120,7 +124,7 @@
         .card_explorer {
             transform: translateY(0);
             --webkit-backdrop-filter:blur(5px);
-            backdrop-filter: blur(5px);
+            //backdrop-filter: blur(5px);
         }
     }
 }
